<resources>
    <string name="app_name">Defect List</string>
    <string name="select_sp_text">Select SP</string>
    <string name="select_res_text">Select RES</string>
    <string name="select_station_text">Select station</string>
    <string name="station_add_bug">Add bug</string>
    <string name="section_format">Not created! %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="station_bug_comment_text">Commet</string>
    <string name="station_bug_comment_comment">Enter comment</string>
    <string name="add_station_bug_name">Enter defect detail:</string>
    <string name="station_save_bug">Save defect to database!</string>
    <string name="sync_service_description">Service sync data to corp db</string>
    <string name="sync_label">Sync to server</string>
    <string name="sync_button_text">Start sync</string>
    <string name="sync_date_label">Sync last success date:</string>
    <string name="no_sync">no sync</string>
    <string name="sync_stop_button_text">Stop sync</string>
</resources>
