<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_station_bug"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.drsk.progserega.defectlist.addStationBug">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/add_station_bug_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView2"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:text="@string/station_bug_comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/station_bug_comment"
            android:hint="@string/station_bug_comment_comment" />

        <Button
            android:onClick="stationSaveBug"
            android:text="@string/station_save_bug"
            android:layout_height="wrap_content"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="118dp"
            android:id="@+id/button"
            android:textAlignment="center"
            android:elevation="0dp"
            android:layout_width="wrap_content" />

    </LinearLayout>

</RelativeLayout>
