<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.drsk.progserega.defectlist.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_sync_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/sync_label" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/sync_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sync_date_label"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:ems="10"
            android:id="@+id/sync_date"
            android:layout_weight="1"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/no_sync"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:onClick="startSync"
        android:text="@string/sync_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sync_button"
        android:layout_below="@+id/section_sync_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/progressBar"
        android:layout_below="@+id/sync_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</RelativeLayout>
